[package]
name = "inform"
version = "0.2.1"
authors = ["Ovidiu Ionescu <ovidiu@ionescu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper={ version="*", features = ["full"] }
tokio={ version="*", features = ["full"] }
pretty_env_logger="*"
ssh2="*"
rayon="*"
config="*"
lazy_static="*"
